Kontakt fixed on tablet and web

--- a/css/styles.css
+++ b/css/styles.css
@@ -1147,104 +1147,136 @@ footer {
   /* --Kristian slut --------------------------- */
   .koverskrift1 {
     text-align: center;
-    margin-top: 10%;
+    margin: 80px 0 0 0;
     color: #707070; }
 
   .kflex1 {
-    margin-top: 4%; }
+    margin: 0;
+    justify-content: space-around; }
 
   .koverskrift2 {
     text-align: center;
-    margin-top: 2%;
-    margin-bottom: 1%;
+    margin: 10% 0 0 0;
     color: white; }
 
   .koverskrift3 {
     text-align: center;
-    margin-top: 2%;
-    margin-bottom: 1%;
-    margin-right: -10%;
-    color: white; }
+    margin: 0;
+    color: white;
+    width: 100%; }
 
   .kbroed {
     display: none; }
 
   .kbroed3 {
-    margin-left: 38%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
     color: white; }
 
   .kcon1 {
-    width: 25%;
-    margin-top: 2%;
-    margin-left: 10%; }
+    width: 45%;
+    margin: 30px 0 0 0; }
+
+  .koverskrift {
+    width: 70%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto; }
 
   .kimage1 {
-    width: 20%;
-    margin-top: -0.5%;
-    margin-right: 12%; }
+    width: 45%;
+    margin: 30px 0 0 0; }
+
+  #kHanErForStor {
+    width: 55%;
+    margin-left: auto;
+    margin-right: auto; }
 
   .kbroed2 {
     display: block;
     color: white;
-    margin-top: 1%; }
+    margin: 0; }
 
   .kflex2 {
-    flex-direction: row-reverse; }
-
-  .kcon2 {
+    width: 100%;
+    flex-direction: row-reverse;
+    justify-content: space-around;
     margin: 5% 0 0 0; }
 
+  #kflex2id {
+    margin: 5% auto;
+    width: 70%; }
+
+  .kcon2 {
+    margin: 0;
+    width: 30%; }
+
   .kflextext1 {
-    margin: 10% 51% 0 0; }
+    width: 100%;
+    margin: 0;
+    padding: 0; }
 
   .kcon3 {
-    margin: 7% 2% 0 0; }
+    margin: 0; }
 
   .kflextext2 {
-    margin: 3% 48.5% 0 0; }
+    margin: 0; }
 
   .kcon4 {
-    margin: 8% 0 0 12%; }
+    margin: 0; }
 
   .kflextext3 {
-    margin: 10% 40% 0 0; }
+    margin: 0; }
 
   #kcon3 {
-    margin: 5% 13% 0 0; }
+    margin: 0; }
 
   #kflextext2 {
-    margin: 3% 48.5% 0 0; }
+    margin: 0; }
 
   #kcon4 {
-    margin: 6% 0 15% 26%; }
+    margin: 0; }
 
   #kflextext3 {
-    margin: 10% 43% 0 0; }
+    margin: 0; }
 
   .kflex3 {
-    display: flex; }
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    margin: 10% 0 0 0; }
+
+  .fleximg1 {
+    width: 230px;
+    margin: 0 auto; }
+
+  .kfleximg2 {
+    display: block;
+    width: 45%; }
 
   .kcontainer {
     display: inline-block;
     padding: 20px;
     font-family: 'Tajawal', sans-serif;
     font-size: 100%;
-    text-align: center; }
+    text-align: center;
+    width: 100%; }
 
   .knavn, .kemail {
-    width: 200%;
+    width: 100%;
     height: 40px;
-    font-size: 12pt;
-    padding-top: 1%;
+    font-size: 13pt;
+    font-family: 'Tajawal', sans-serif;
     border-radius: 10px;
     border: 1px solid white;
     box-shadow: none; }
 
   .kbesked {
-    width: 200%;
-    height: 200px;
-    font-size: 12pt;
-    padding-top: 1%;
+    font-family: 'Tajawal', sans-serif;
+    width: 100%;
+    height: 150px;
+    font-size: 13pt;
     border-radius: 10px;
     border: 1px solid white;
     box-shadow: none; }
@@ -1255,17 +1287,17 @@ footer {
     border-radius: 10px;
     font-size: 12pt;
     font-family: 'Tajawal', sans-serif;
-    margin: 10% 0 0 150%;
+    margin-top: 15px;
+    margin-left: 75%;
+    right: 0;
     padding: 5px 12px;
     color: white;
     height: 40px;
-    width: 50%; }
+    width: 25%; }
 
   .kconformula {
-    margin: -6% 0 0 -357px; }
-
-  .kfleximg2 {
-    padding-right: 148px; }
+    margin: 0;
+    width: 45%; }
 
   .i_intro {
     display: grid;
@@ -1505,6 +1537,11 @@ footer {
     grid-row: a8;
     text-align: left;
     margin-top: 30px; }
+
+  .koverskrift1 {
+    text-align: center;
+    margin: 0;
+    color: #707070; }
 
   /* 404 & 403 */
   .nMain {
